# agent-litreview

./: .gitignore  LICENSE  README.md  pyproject.toml
alit/: __main__.py
alit/scripts/: db.py  lit.py  recommend.py  synthesize.py
alit/skill/: SKILL.md
alit/tests/: test_core.py
literature/: AGENTS.md  README.md  SETUP.md  __main__.py  landscape.md  landscape.yaml
literature/index/: graph.yaml  references.bib  status.yaml
literature/papers/: berti2025trades.md  cao2025financial.md  cao2025from.md  devlin2019bert.md  dwarakanath2024abides.md  gould2013limit.md  hrt2022sdp.md  kawawa-beaudan2026tradefm.md  li2024mars.md  linna2025lobert.md  nagy2025lob.md  shi2025kronos.md  sirignano2018universal.md  vaswani2017attention.md  wang2026difflob.md  wheeler2024marketgpt.md  yang2025twinmarket.md
literature/scaffold/: .gitignore  AGENTS.md  PURPOSE.md  README.md
literature/scripts/: cluster.py  db.py  discover.py  enrich.py  generate_review.py  ingest.py  landscape.py  lit.py  migrate.py  pagerank.py  parse.py  purpose.py  query.py  rebuild_index.py  recommend.py  s2_client.py  scout.py  search.py  summarize.py  synthesize.py  update.py
literature/skill/: SKILL.md
literature/templates/: neurips_2025.sty  review_template.tex.j2
literature/tests/: test_cluster.py  test_core.py  test_db.py  test_discover.py  test_enrich.py  test_generate.py  test_ingest.py  test_integration.py  test_landscape.py  test_lit.py  test_migrate.py  test_pagerank.py  test_parse.py  test_purpose.py  test_query.py  test_rebuild.py  test_recommend.py  test_s2_client.py  test_scout.py  test_search.py  test_summarize.py  test_sync.py  test_synthesize.py  test_update.py
literature/tests/fixtures/: s2_batch_response.json  s2_citations_response.json  s2_recommendations_response.json  s2_search_response.json  sample_paper.md  sample_s2_response.json
literature/tests/fixtures/papers/: paper_a.md  paper_b.md
literature/themes/: 01-world-models.md
