[project]
name = "agent-litreview"
version = "0.2.0"
description = "Lightweight, agent-native literature review system. Zero dependencies. SQLite-only."
readme = "README.md"
license = "MIT"
requires-python = ">=3.12"
keywords = ["literature-review", "research", "agents", "sqlite"]

[project.scripts]
lit = "literature.scripts.lit:main"

[project.urls]
Repository = "https://github.com/Zhou-Hangyu/agent-litreview"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["literature"]

[tool.uv]
dev-dependencies = ["pytest>=8.0.0"]

[tool.pytest.ini_options]
testpaths = ["literature/tests"]
